layout fixes || correct cropping

--- a/src/client/sass/style.sass
+++ b/src/client/sass/style.sass
@@ -46,21 +46,7 @@ html body
     font-family: Anders
     font-weight: bold
 
-.toolbar
-  @include flex-center
-  flex-shrink: 0
-  height: 50px
-  width: 100%  
-  background: $side-color
-  color: $accent-color-2
-   
 
-.tool-btn
-  flex-basis: 200px
-  margin-right: 50px
-
-  &:last-child
-    margin-right: 0
 
 button
   color: $accent-color !important
@@ -97,15 +83,35 @@ input
   border-bottom: 3px solid $side-color-2
 
 .container
-  @include flex-center
-  flex-direction: column
   flex-grow: 1
   width: 100%
-  height: 100vh
+  height: calc(100vh - 80px)
+
+
+.connect-container
+  @include flex-center  
+  height: 100%
+  width: 100%
+
+.toolbar
+  @include flex-center
+  flex-shrink: 0
+  height: 50px
+  width: 100%
+  background: $side-color
+  color: $accent-color-2
+   
+
+.tool-btn
+  flex-basis: 200px
+  margin-right: 50px
+
+  &:last-child
+    margin-right: 0
 
 .imgContainer
-  max-height: 80%
-  max-width: 80%
+  height: calc(100% - 50px)
+  width: 100%
   @include flex-center
 
 
@@ -120,7 +126,7 @@ input
   @include flex-center
   flex-direction: column
   height: 200px
-  width: 300px  
+  width: 300px
   background: $side-color
   border-radius: 10px
 
